
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ok ;
 int puts (char*) ;
 int strcpy (char*,char*) ;

void *func1(void *none)
{
 char buf[8];
 while(1)
 {
  if(!ok)
   continue;
  strcpy(buf, "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA");
  break;
 }
 puts("func1 overflow!");
}
