; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_25429.c_func1.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_25429.c_func1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ok = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"func1 overflow!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @func1(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca [8 x i8], align 1
  store i8* %0, i8** %3, align 8
  br label %5

5:                                                ; preds = %1, %8
  %6 = load i32, i32* @ok, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %5
  br label %5

9:                                                ; preds = %5
  %10 = getelementptr inbounds [8 x i8], [8 x i8]* %4, i64 0, i64 0
  %11 = call i32 @strcpy(i8* %10, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9
  %13 = call i32 @puts(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @puts(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
